src/BRIDGE_Connection/logs/TODAYYYYYYYY_8828346.err
Traceback (most recent call last):
  File "/home/kp779/BRIDGE_Connection/src/BRIDGE_Connection/compliance.py", line 7, in <module>
    from init import *
  File "/home/kp779/BRIDGE_Connection/src/BRIDGE_Connection/init.py", line 48
    if Name == 'cantilever':
                           ^
SyntaxError: invalid syntax
